// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleMap has not changed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GoogleMap
    center={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    google={
      Object {
        "maps": Object {
          "ControlPosition": Object {
            "TOP_CENTER": "TOP_CENTER",
          },
          "Data": [Function],
          "Map": [Function],
          "MapTypeControlStyle": Object {
            "DROPDOWN_MENU": "DROPDOWN_MENU",
          },
          "Polygon": [Function],
          "drawing": Object {
            "DrawingManager": [Function],
            "OverlayType": Object {
              "POLYGON": "POLYGON",
            },
          },
          "geometry": Object {
            "spherical": Object {
              "computeSignedArea": [Function],
            },
          },
        },
      }
    }
    height={100}
    width={100}
    zoom={1}
  >
    <div />
  </GoogleMap>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <GoogleMapInitialzer
        center={
          Object {
            "lat": 0,
            "lng": 0,
          }
        }
        height={100}
        width={100}
        zoom={1}
      >
        <div />
      </GoogleMapInitialzer>,
      "value": Object {
        "maps": Object {
          "ControlPosition": Object {
            "TOP_CENTER": "TOP_CENTER",
          },
          "Data": [Function],
          "Map": [Function],
          "MapTypeControlStyle": Object {
            "DROPDOWN_MENU": "DROPDOWN_MENU",
          },
          "Polygon": [Function],
          "drawing": Object {
            "DrawingManager": [Function],
            "OverlayType": Object {
              "POLYGON": "POLYGON",
            },
          },
          "geometry": Object {
            "spherical": Object {
              "computeSignedArea": [Function],
            },
          },
        },
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "center": Object {
          "lat": 0,
          "lng": 0,
        },
        "children": <div />,
        "height": 100,
        "width": 100,
        "zoom": 1,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": [Function],
    },
    "type": Object {
      "$$typeof": Symbol(react.provider),
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": Object {
          "$$typeof": Symbol(react.context),
          "_calculateChangedBits": null,
          "_context": [Circular],
        },
        "Provider": [Circular],
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": null,
        "_currentValue2": null,
        "_threadCount": 0,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <GoogleMapInitialzer
          center={
            Object {
              "lat": 0,
              "lng": 0,
            }
          }
          height={100}
          width={100}
          zoom={1}
        >
          <div />
        </GoogleMapInitialzer>,
        "value": Object {
          "maps": Object {
            "ControlPosition": Object {
              "TOP_CENTER": "TOP_CENTER",
            },
            "Data": [Function],
            "Map": [Function],
            "MapTypeControlStyle": Object {
              "DROPDOWN_MENU": "DROPDOWN_MENU",
            },
            "Polygon": [Function],
            "drawing": Object {
              "DrawingManager": [Function],
              "OverlayType": Object {
                "POLYGON": "POLYGON",
              },
            },
            "geometry": Object {
              "spherical": Object {
                "computeSignedArea": [Function],
              },
            },
          },
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "center": Object {
            "lat": 0,
            "lng": 0,
          },
          "children": <div />,
          "height": 100,
          "width": 100,
          "zoom": 1,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      "type": Object {
        "$$typeof": Symbol(react.provider),
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": Object {
            "$$typeof": Symbol(react.context),
            "_calculateChangedBits": null,
            "_context": [Circular],
          },
          "Provider": [Circular],
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": null,
          "_currentValue2": null,
          "_threadCount": 0,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`GoogleMapWithLoader has not changed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GoogleMapWithLoader
    center={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    googleMapURL=""
    height={100}
    width={100}
    zoom={1}
  >
    <div />
  </GoogleMapWithLoader>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <GoogleMapInitialzer
        center={
          Object {
            "lat": 0,
            "lng": 0,
          }
        }
        height={100}
        width={100}
        zoom={1}
      >
        <div />
      </GoogleMapInitialzer>,
      "scriptUrl": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "center": Object {
          "lat": 0,
          "lng": 0,
        },
        "children": <div />,
        "height": 100,
        "width": 100,
        "zoom": 1,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <GoogleMapInitialzer
          center={
            Object {
              "lat": 0,
              "lng": 0,
            }
          }
          height={100}
          width={100}
          zoom={1}
        >
          <div />
        </GoogleMapInitialzer>,
        "scriptUrl": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "center": Object {
            "lat": 0,
            "lng": 0,
          },
          "children": <div />,
          "height": 100,
          "width": 100,
          "zoom": 1,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
